# promptable

./: Cargo.toml  ISSUE.md  README.md  ROADMAP.md  TODO.md  rust-toolchain.toml
promptable/: Cargo.toml  ISSUE.md  README.md  ROADMAP.md  TODO.md
promptable/examples/: complex_form.rs  register_book_from_same_author.rs  simple_form.rs
promptable/src/: display.rs  inspect.rs  lib.rs  menu.rs
promptable/src/basics/: display.rs  menu.rs  mod.rs  promptable.rs
promptable/tests/: tests.rs
promptable_derive/: Cargo.toml  README.md
promptable_derive/doc/: attributs_derive.md
promptable_derive/src/: display.rs  impl_inspect.rs  impl_struct.rs  impl_struct_vec.rs  lib.rs  params.rs
