[package]
name = "promptable"
version = "0.3.2"
edition = "2021"
description = "macro derive for promptable"
publish = false # TODO
repository = "https://github.com/Cyrix126/promptable"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Louis-Marie Baer <lm@baermail.fr>"]
keywords = ["cli", "ask", "prompt", "question", "interactive", "derive"]
categories = ["command-line-interface", "value-formatting", "derive"]

[dependencies]
inquire = { git = "https://github.com/Cyrix126/inquire-time", features=["macros"], optional = true}
time = {version = "0.3", optional = true}
termion = {version = "2", optional=true}
promptable_derive = {path = "../promptable_derive", optional = true}

 [features]
default = ["inquire/editor", "time", "promptable_derive", "termion"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

