[package]
name = "promptable"
version = "0.5.3"
edition = "2021"
description = "macro derive for promptable"
publish = false # TODO need to merge inquire-time into upstream or publish it
repository = "https://github.com/Cyrix126/promptable"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Louis-Marie Baer <lm@baermail.fr>"]
keywords = ["cli", "ask", "prompt", "question", "interactive", "derive"]
categories = ["command-line-interface", "value-formatting", "derive"]
[dependencies]
inquire = { git = "https://github.com/Cyrix126/inquire-time", features=["macros"], optional = true}
time = {version = "0.3", optional = true}
termion = {version = "2", optional=true}
anyhow = "1"
derive_more = {version="0", default-features=false, features=["display", "deref", "deref_mut"]}
promptable_derive = {path = "../promptable_derive", optional = true}
similar = {version="2", optional=true}
trait-gen = "0"
[features]
default = ["inquire/editor", "time", "promptable_derive", "termion", "menu"]
menu = ["display"]
display = ["similar"]
[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
