[package]
name = "promptable"
version = "0.8.0"
edition = "2021"
description = "library promptable"
publish = false # TODO need to merge inquire-time into upstream or publish it
repository = "https://github.com/Cyrix126/promptable"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Louis-Marie Baer <lm@baermail.fr>"]
keywords = ["cli", "ask", "prompt", "question", "interactive", "derive"]
categories = ["command-line-interface", "value-formatting", "derive"]

[dependencies]
inquire = { git = "https://github.com/Cyrix126/inquire-time", features=["macros"], optional = true}
time = {version = "0.3", optional = true}
termion = {version = "2", optional=true}
anyhow = {version = "1", optional=true}
derive_more = {version="0", default-features=false, features=["display", "deref", "deref_mut"], optional= true}
trait-gen = {version="0", optional=true}
similar = {version="*", optional=true}
promptable_derive = {path = "../promptable_derive", optional = true}
clap = {version = "4", optional = true}

[features]
default = ["basics", "inspect", "derive"]
basics = ["inquire/editor", "time", "termion", "anyhow", "derive_more", "trait-gen", "similar"]
inspect = ["anyhow", "derive", "promptable_derive/inspect"]
derive = ["promptable_derive", "basics"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
