[package]
name = "promptable_derive"
version = "0.5.3"
edition = "2021"                           
description = "macro derive for promptable" 
publish = false # TODO
repository = "https://github.com/Cyrix126/promptable"                                  
license = "GPL-3.0-only"
readme = "README.md"                       
authors = ["Louis-Marie Baer <lm@baermail.fr>"]
keywords = ["cli", "ask", "prompt", "question", "interactive", "derive"]
categories = ["command-line-interface", "value-formatting"]
include = ["./src"]                       

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
darling = "0.20"
proc-macro2 = "1"

